--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: #c12422;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -22,5 +22,5 @@
   /* Add a color to the active/current link */
   .topnav a.active {
     background-color: #c12422;
-    color: white;
+    color: #FCF5E5;
   }
