--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,6 @@ body, html {
     height: 100%;
   }
   
-  #Conquest-of-Elysium {background-color: red;}
-  #Note-Taker {background-color: green;}
+  #COE {background-color: red;}
+  #NoteTaker {background-color: green;}
   #Derelict {background-color: blue;}
