--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,7 @@ body, html {
 .split {
   height: 100%;
   width: 50%;
-  position: fixed;
-  z-index: 1;
+  position: absolute;
   top: 0;
   overflow-x: hidden;
   padding-top: 20px;
@@ -81,7 +80,7 @@ body, html {
 
 /* If you want the content centered horizontally and vertically */
 .centered {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
