--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,6 @@ body, html {
   }
 
 .grid-container {
-  display: grid;
   grid-template-rows: auto auto;
   gap: 10px;
   grid-template-columns: auto auto auto;
@@ -71,25 +70,29 @@ body, html {
   }
 
   .split {
+    display: grid;
     grid-row: 2;
     grid-column: 1 / span 2;
   }
 
   /* Control the left side */
   .left {
-    grid-row: 1;
+    grid-row: 2;
     grid-column: 1;
+    text-align: center;
   }
 
   /* Control the right side */
   .right {
     grid-row: 2;
     grid-column: 2;
+    text-align: center;
   }
 
 /* Style the image inside the centered container, if needed */
 .centered img {
   width: 150px;
+  border-radius: 50%;
 }
   
 #COE {background-color: red;}
