--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body, html {
   /* Style tab links */
   .tablink {
     background-color: #555;
-    color: white;
+    color: black;
     float: left;
     border: none;
     outline: none;
@@ -52,27 +52,29 @@ body, html {
   
   /* Style the tab content (and add height:100% for full page content) */
   .tabcontent {
-    color: white;
-    padding: 100px 20px;
+    color: black;
     height: 100%;
     width: 100%;
   }
 
 .grid-container {
   grid-template-rows: auto auto;
-  gap: 10px;
-  grid-template-columns: auto auto auto;
 }
 
   .top {
     grid-row: 1;
     grid-column: 1 / span 2;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
   }
 
   .split {
     display: grid;
     grid-row: 2;
     grid-column: 1 / span 2;
+    grid-template-rows: auto auto;
+    grid-template-columns: 49.75% 0.5% 49.75%;
   }
 
   /* Control the left side */
@@ -80,13 +82,23 @@ body, html {
     grid-row: 2;
     grid-column: 1;
     text-align: center;
+    background-color: #9e1316;
+    color: white;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
   }
 
   /* Control the right side */
   .right {
     grid-row: 2;
-    grid-column: 2;
+    grid-column: 3;
     text-align: center;
+    background-color: #58311e;
+    color: white;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
 /* Style the image inside the centered container, if needed */
@@ -95,6 +107,6 @@ body, html {
   border-radius: 50%;
 }
   
-#COE {background-color: red;}
-#NoteTaker {background-color: green;}
-#Derelict {background-color: blue;}
+#COE {background-color: #FCF5E5;}
+#NoteTaker {background-color: #FCF5E5;}
+#Derelict {background-color: #FCF5E5;}
